# modpacks-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/types/: mod.rs  modpacksch.rs  modrinth.rs
