[package]
name = "modpacks-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "^0.2.0", features = ["alloc"] }
serde = { version = "^1.0.195", features = ["derive"] }
serde_json = "^1.0.111"
sha1 = "^0.10.6"
sha2 = "^0.10.8"
reqwest = { version = "^0.11.23", default-features = false, features = [
    "blocking",
    "rustls-tls-native-roots",
] }
